--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +18,7 @@
     "@angular/platform-browser": "^8.2.6",
     "@angular/platform-browser-dynamic": "^8.2.6",
     "@angular/router": "^8.2.6",
+    "@ngrx/store": "^8.3.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "tslib": "^1.10.0",
